--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,6 +7,8 @@
   <title><%= APP_TITLE %></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/assets/css/dash.css">
+  <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css">
   <!-- inject:css -->
   <!-- endinject -->
 </head>
